# serverless-api

./: README.md  create.py  list.py  pyproject.toml  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
